Tut08/src/examples/tut08/bad/Frame.java
package examples.tut08.bad;

public class Frame extends BicycleComponent {

	public Frame(float cost, float weight) {
		super(cost, weight);
	}
}
